ros-comms/torque_ws/log/build_2023-05-03_14-03-21/reachy_vel_acc/stderr.log
  File "/home/reachy/torque_ws/install/reachy_vel_acc/lib/python3.8/site-packages/reachy_vel_acc/pub_vel_acc.py", line 22
    10,
    ^
SyntaxError: positional argument follows keyword argument

